--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.3",
+    "@mui/x-date-pickers": "^6.17.0",
     "mongodb": "^6.2.0",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
