Need to fix CORS

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.17.0",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.10",
+    "micro-cors": "^0.1.1",
     "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
